--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -9,70 +9,11 @@
 		<link rel="stylesheet" href="__PUBLIC__css/base.css" />
 		<link rel="stylesheet" href="__PUBLIC__css/register.css">
 		<link rel="stylesheet" href="__PUBLIC__css/public/alertWrap.css">
-<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
+	<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
 </script>
 	</head>
 
 	<body>
-<<<<<<< HEAD
-=======
-		<div class="registerbox">
-			<div class="header-zp">
-				<span class="return" onclick="javascript:history.back(-1)">
-                    <img src="__PUBLIC__images/return-zp@2x.png" />
-                </span>
-				<h3>注册</h3>
-			</div>
-			<div class="reg-new-page">
-				<!-- <form action="{:url('index/login/regis')}" method="post" class="reg-from"> -->
-					<div class="info mistake"></div>
-					<div class="from-group">
-						<span class="from-tit">用户名:</span>
-						<input type="text" placeholder="请输入用户名" name="username"  class="pptt username ">
-					</div>
-					<div class="info mistake"></div>
-					<div class="from-group">
-						<span class="from-tit">密码:</span>
-						<input type="password" placeholder="请输入用户密码" name="password" class="pptt password">
-					</div>
-					
-				
-					<div class="info mistake"></div>
-					<div class="from-group">
-<span class="from-tit">确认密码</span>
-<input type="text" placeholder="请重新输入密码" name="passworda"  class="pptt passworda ">
-					</div>
-					
-					<div class="info mistake"></div>
-
-					<div class="from-group">
-						<span class="from-tit">邮箱:</span>
-						<input type="text" placeholder="请输入用户邮箱" name="usermail" class="pptt email">
-					</div>
-					<div class="info mistake"></div>
-					<div class="from-group">
-						<span class="from-tit">手机号:</span>
-						<input type="phone" placeholder="请输入手机号码" name="mobile" class="pptt mobile">
-					</div>
-					<div class="from-group policy">
-						<span class="from-cc">*直推人推广码:</span>
-						<input type="text" placeholder="请输入直推人推广码" value="{$promotion}"  name="promotion"  class="pptt promotion">
-					</div>
-					
-					<div class="send-code mistake info"></div>
-					<div class="from-group ">
-						<span class="from-tit">验证码:</span>
-						<input type="text" placeholder="请输入验证码"  name="verify" class="pptt verify">
-						<button class="send-code" type="button">获取验证码</button>
-					</div>
-					<div class="from-group policy">
-						<span class="from-cc acc">是否同意政策</span>
-						<i class=" icon "></i>
-						<span class="info "></span>
-					</div>
-					<div class="reg-btn">
-						<button  id="submit" class="btn dis submit-btn">注册</button>
->>>>>>> a70b6ed981b54065637df78c70756a105e0a683e
 			<div class="registerbox">
 				<div class="header-zp">
 					<span class="return" onclick="javascript:history.back(-1)">
@@ -80,7 +21,6 @@
 					<h3>注册</h3>
 				</div>
 				<div class="reg-new-page">
-<<<<<<< HEAD
 					<form action="{:url('index/login/regis')}" method="post" class="reg-from">
 						<div class="info mistake"></div>
 						<div class="from-group">
@@ -95,7 +35,7 @@
 							<span class="from-tit">密码:</span>
 							<div class="from-icon">
 								<img src="__PUBLIC__images/login/suo.png" alt="">
-								<input type="password" placeholder="请输入用户密码 6~16位" name="pwd" value class="pptt password">
+								<input type="password" placeholder="请输入密码 6~16位" name="pwd" value class="pptt password">
 							</div>
 						</div>
 						<div class="info mistake"></div>
@@ -103,7 +43,7 @@
 						<span class="from-tit">确认密码:</span>
 						<div class="from-icon">
 							<img src="__PUBLIC__images/login/suo.png" alt="">
-							<input type="password" placeholder="请第二次输入用户密码" name="pwd2" value class="pptt affirmpwd">
+							<input type="password" placeholder="再次确认密码" name="pwd2" value class="pptt affirmpwd">
 						</div>
 					</div>
 						<div class="info mistake"></div>
@@ -124,10 +64,10 @@
 						</div>
 						<div class="info mistake"></div>
 						<div class="from-group ">
-							<span class="from-tit">推荐人:</span>
+							<span class="from-tit">推荐码:</span>
 							<div class="from-icon">
 								<img src="__PUBLIC__images/login/good.png" alt="">
-								<input type="text" placeholder="直推人用户名" name="directname" value class="pptt recommend">
+								<input type="text" placeholder="请输入推荐码" name="directname" value class="pptt recommend">
 							</div>
 						</div>
 						<div class="send-codemsg mistake info"></div>
@@ -148,9 +88,6 @@
 							<button type="button" class="btn dis" disabled=disabled>注册</button>
 						</div>
 					</form>
-=======
-
->>>>>>> a70b6ed981b54065637df78c70756a105e0a683e
 					<div class="login-new">
 						<a href="{:url('login/index')}" class="register">已有账号 登录</a>
 						<a href="">用户协议</a>
